--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
 		"@types/node": "^12.20.37",
 		"@types/react": "^17.0.34",
 		"@types/react-dom": "^17.0.11",
+		"@types/react-material-ui-form-validator": "^2.1.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-material-ui-form-validator": "^3.0.0",
 		"react-router-dom": "^6.0.2",
 		"react-scripts": "4.0.3",
 		"typescript": "^4.4.4",
